--- a/styles.css
+++ b/styles.css
@@ -35,15 +35,31 @@ body{
 }
 :root{
   --green: #006A51;
+  --gradient-green: linear-gradient(to bottom right, color-mix(in hsl, white, var(--green)), var(--green));
 }
 #intro{
-  width: 50vmin;
-  margin: auto;
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  align-items: flex-start; 
+  font-size: xx-large;
 }
-
-#sjihclogo{
-  width: 50vmin;
-  filter: drop-shadow(0 0 10vmin #fff);
+.highlight{
+  background-image: var(--gradient-green);
+  color: transparent;
+  background-clip: text;
+}
+#ideas{
+  animation: textCaro 2s ease-in-out infinite;
+  position: relative;
+  margin: -2rem 0 -1rem 0;
+}
+@keyframes textCaro {
+  0% {opacity: 0.5; bottom: 1rem;}
+  50% {opacity: 1; bottom: 0;}
+  100% {opacity: 0.5; bottom: -1rem;}
 }
 #flag{
   height: 8vh;
@@ -65,13 +81,9 @@ header div{
   align-items: center;
   padding-right: 1rem;
 }
-#intro h1{
-  text-shadow: 0.25rem 0.25rem var(--green);
-  text-align: center;
-  font-size: 10vmin;
-}
+
 p a{
-    color: var(--green);
+  color: var(--green);
 }
 p a:visited{
   color: #fff;
@@ -84,11 +96,13 @@ p a:hover{
 nav{
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 5vw;
+
 }
 nav a{
     height: 10vh;
-    width: 10vw;
+    width: 20vw;
     background-color: var(--green);
     border-radius: 2vmin;
     color: #fff;
@@ -98,6 +112,7 @@ nav a{
     align-items: center;
     justify-content: center;
     transition: background-color 0.3s ease, color 0.3s ease;
+    text-align: center;
 }
 nav a:hover{
     background-color: #fff;
