--- a/styles.css
+++ b/styles.css
@@ -35,10 +35,11 @@ body{
 }
 :root{
   --green: #006A51;
-  --gradient-green: linear-gradient(to bottom right, color-mix(in hsl, white, var(--green)), var(--green));
+  --gradient-green: linear-gradient(to bottom right, #00C99A, var(--green));
 }
 #intro{
-  width: 100%;
+  padding: 2rem;
+  width: 60%;
   height: 90vh;
   display: flex;
   flex-direction: column;
@@ -46,20 +47,31 @@ body{
   align-items: flex-start; 
   font-size: xx-large;
 }
+#sjihclogo{
+  width: 30%;
+  height:fit-content;
+  filter: drop-shadow(0 0 10vmin #fff);
+}
+#start{
+  display: flex;
+  align-items: center;
+}
 .highlight{
   background-image: var(--gradient-green);
   color: transparent;
   background-clip: text;
 }
+.textCaro{
+  animation: textCaro 2s ease-in-out;
+}
 #ideas{
-  animation: textCaro 2s ease-in-out infinite;
   position: relative;
   margin: -2rem 0 -1rem 0;
 }
 @keyframes textCaro {
-  0% {opacity: 0.5; bottom: 1rem;}
+  0% {opacity: 0; bottom: 1rem;}
   50% {opacity: 1; bottom: 0;}
-  100% {opacity: 0.5; bottom: -1rem;}
+  100% {opacity: 0; bottom: -1rem;}
 }
 #flag{
   height: 8vh;
@@ -73,7 +85,7 @@ header{
   z-index: 1000;
   display: flex;
   justify-content: space-between;
-  background-color: var(--green);
+  background: var(--gradient-green);
   border-radius: 2vmin;
 }
 header div{
@@ -103,7 +115,7 @@ nav{
 nav a{
     height: 10vh;
     width: 20vw;
-    background-color: var(--green);
+    background: var(--gradient-green);
     border-radius: 2vmin;
     color: #fff;
     text-decoration: none;
@@ -115,7 +127,7 @@ nav a{
     text-align: center;
 }
 nav a:hover{
-    background-color: #fff;
+    background: linear-gradient(to bottom right, white, white);
     color: var(--green);
 }
 .project {
@@ -149,4 +161,5 @@ nav a:hover{
   border-radius: 2vmin;
   height: 1rem;
   padding: 1rem;
+  text-align: center;
 }
