--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ body{
 }
 #intro{
   padding: 2rem;
-  height: 90vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center; 
@@ -77,23 +77,28 @@ body{
   height: 8vh;
 }
 header{
-  width: 100%;
-  height: 10vh;
-  position: sticky;
-  top: 0;
-  left: 0;
+  width: calc(100% - 2rem);
+  position: fixed;
+  top: 1rem;
+  left: 1rem;
   z-index: 1000;
   display: flex;
   justify-content: space-between;
   background: var(--gradient-green);
   border-radius: 2vmin;
+  padding: 1rem 0;
 }
 header div, nav{
   display: flex;
   align-items: center;
   padding-right: 1rem;
+  flex-wrap: wrap;
+  gap: 1rem;
+  text-wrap: nowrap;
 }
-
+header nav{
+  justify-content: end;
+}
 p a{
   color: var(--green);
 }
@@ -147,11 +152,12 @@ main{
   padding: 1rem;
 }
 .joinButton {
-  font-size: 4rem;
+  font-size: 3rem;
   text-decoration: none;
   color: #fff;
-  padding: 1rem;
+  padding: 2rem;
   background: var(--gradient-green);
+  border-radius: 1rem;
 }
 footer {
   width: 100%;
